get all reservations
